--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -46,6 +46,40 @@
     align-items: center;
 }
 
+.socialHome{
+    display: flex;
+    width: 90vw;
+}
+.socialHome .logoHome{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.socialHome .logoHome img{
+    border: var(--colorTextBlack) solid 3px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.socialHome .storyHome{
+    display: flex;
+    flex-direction: column;
+    padding: 2vw;
+    text-align: justify;
+    border-radius: 5vh;
+    -webkit-border-radius: 5vh;
+    -moz-border-radius: 5vh;
+    -ms-border-radius: 5vh;
+    -o-border-radius: 5vh;
+    background-color: var(--colorDivInfo);
+}
+.socialHome .storyHome h2{
+    text-align: center;
+}
+
 @media (max-width: 480px){
     .contactHome{
         flex-direction: column;
@@ -66,6 +100,23 @@
        height: 40vh;
        justify-content: space-around;
     }
+    .socialHome{
+        flex-direction: column;
+        margin-top: 5vh;
+        align-items: center;
+    }
+    .socialHome .logoHome{
+        margin-bottom: 5vh;
+    }
+    .socialHome .storyHome{
+        width: 90%;
+        min-height: 40vh;
+        justify-content: center;
+        align-items: center;
+    }
+    .socialHome .storyHome p{
+        padding: 2vw;    
+    }
 }
 
 @media (min-width: 481px) and (max-width: 769px){
@@ -83,6 +134,24 @@
         width: 35%;
         justify-content: space-around;
         height: 100%;
+    }
+    .socialHome{
+        margin-top: 5vh;
+        align-items: center;
+    }
+    .socialHome .logoHome{
+        margin-right: 5vh;
+    }
+    .socialHome .storyHome{
+        width: 60vw;
+        height: auto;
+        min-height: 50vh;
+        padding: 2vw;
+        justify-content: center;
+        align-items: center;
+    }
+    .socialHome .storyHome p{
+        padding: 2vw;    
     }
 }
 
@@ -105,6 +174,27 @@
         justify-content: space-around;
         height: 100%;
     }
+    .socialHome{
+        margin-top: 5vh;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .socialHome .storyHome{
+        width: 50vw;
+        min-height: 50vh;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .socialHome .storyHome p{
+        padding: 2vw;    
+    }
+    .socialHome .logoHome{
+        width: 35vw;
+    }
+    .socialHome .logoHome img{
+        width: 90%;
+    }
 }
 
 @media (min-width: 994px){
@@ -125,5 +215,26 @@
         width: 30%;
         justify-content: space-around;
         height: 100%;
+    }
+    .socialHome{
+        margin-top: 5vh;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .socialHome .storyHome{
+        width: 50vw;
+        min-height: 60vh;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .socialHome .storyHome p{
+        padding: 2vw;    
+    }
+    .socialHome .logoHome{
+        width: 40vw;
+    }
+    .socialHome .logoHome img{
+        width: 90%;
     }
 }
