Fix Header fixed position

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,6 +3,7 @@
   color: var(--colorTextBlack);
   display: flex;
   flex-direction: column;
+  margin-top: 10vh;
   width: 100vw;
 }
 .contactHome {
