--- a/src/Components/Domiciles/NavigationMenu/NavigationMenu.css
+++ b/src/Components/Domiciles/NavigationMenu/NavigationMenu.css
@@ -11,8 +11,7 @@
   background-color: var(--colorRed);
   color: var(--colorNavWhite);
   display: flex;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
+  font-family:'Comic Neue', cursive;
   justify-content: center;
   margin-bottom: 1vh;
   min-width: min(30vw, 25%);
@@ -21,19 +20,19 @@
 }
 
 @media (max-width: 480px){
-    .NavBarMenu a {font-size: 0.8rem;
+    .NavBarMenu a {font-size: 1rem;
         width: 55vw;
    }
 }
 @media (min-width: 481px) and (max-width: 769px) {
-    .NavBarMenu a {font-size: 1.2rem;
+    .NavBarMenu a {font-size: 1.4rem;
         width: 60vw;}
 }
 @media (min-width: 770px) and (max-width: 993px) {
-    .NavBarMenu a {font-size: 1.6rem;
+    .NavBarMenu a {font-size: 1.8rem;
         width: 65vw;}
 }
 @media (min-width: 994px) {
-    .NavBarMenu a {font-size: 2rem;
+    .NavBarMenu a {font-size: 2.2rem;
         width: 70vw;}
 }
