--- a/src/Components/Domiciles/ProductCategories/Defoult/Default.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/Default.css
@@ -35,6 +35,6 @@ section.categorySection .productsList{
     display: flex;
     width: 90%;
     margin-top: 5vh;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
