Pizza Card buttons with price chaning

--- a/src/Components/Main/Header/Header.css
+++ b/src/Components/Main/Header/Header.css
@@ -1,4 +1,9 @@
 header{
+    position: absolute;
+    background-color: var(--colorRed);
+}
+
+.headerFloat{
     position: fixed;
     z-index: 2;
 }
