CSS buttons size pizza fixed Responsive Mobile

--- a/src/Components/Domiciles/ProductCategories/Defoult/PizzaCategory/PizzaCard/PizzaCard.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/PizzaCategory/PizzaCard/PizzaCard.css
@@ -82,6 +82,7 @@
     overflow-wrap: break-word;
     align-items: center;
     text-align: center;
+    justify-content: center;
     margin-bottom: 5px;
 }
 
