Buttons per Product Card fuctional and CSS

--- a/src/Components/Domiciles/ProductCategories/Defoult/PizzaCategory/PizzaCard/PizzaCard.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/PizzaCategory/PizzaCard/PizzaCard.css
@@ -36,7 +36,13 @@
     min-width: 25px;
     background-color: var(--colorOldRed);
     color: var(--colorNavWhite);
+    font-size: 1rem;
 }
+
+.pizzaCard .pizzaSize button:hover{
+    background-color: var(--colorRed);
+}
+
 .pizzaCard .pizzaFullDescription{
     display: flex;
     align-items: center;
