Fixed Header position and margins

--- a/src/Components/Domiciles/NavigationMenu/NavigationMenu.css
+++ b/src/Components/Domiciles/NavigationMenu/NavigationMenu.css
@@ -1,10 +1,10 @@
 .NavBarMenu {
   display: flex;
   flex-direction: column;
-  height: auto;
+  height: 63vh;
   width: 100%;
   justify-content: space-around;
-  padding: 2vw;
+  padding: 10px;
 }
 .NavBarMenu a {
   align-items: center;
@@ -17,22 +17,23 @@
   min-width: min(30vw, 25%);
   padding: 2vh 0;
   text-decoration: none;
+  overflow-y: hidden;
 }
 
 @media (max-width: 480px){
-    .NavBarMenu a {font-size: 1rem;
+    .NavBarMenu a {font-size: 0.9rem;
         width: 55vw;
    }
 }
 @media (min-width: 481px) and (max-width: 769px) {
-    .NavBarMenu a {font-size: 1.4rem;
+    .NavBarMenu a {font-size: 1.2rem;
         width: 60vw;}
 }
 @media (min-width: 770px) and (max-width: 993px) {
-    .NavBarMenu a {font-size: 1.8rem;
+    .NavBarMenu a {font-size: 1.4rem;
         width: 65vw;}
 }
 @media (min-width: 994px) {
-    .NavBarMenu a {font-size: 2.2rem;
+    .NavBarMenu a {font-size: 1.8rem;
         width: 70vw;}
 }
