Api Message WhatsApp link

--- a/src/Components/ShoppingCart/ShoppingCart.css
+++ b/src/Components/ShoppingCart/ShoppingCart.css
@@ -110,6 +110,10 @@ section.formCart{
     align-items: center;
     margin-top: max(2vh, 15px);
 }
+section.formCart p{
+  width: 500px;
+  word-wrap: break-word;
+}
 section.formCart form{
     display: flex;
     width: 80%;
