--- a/src/Components/ShoppingCart/ProductCardInCart/ProductCardInCart.css
+++ b/src/Components/ShoppingCart/ProductCardInCart/ProductCardInCart.css
@@ -26,7 +26,7 @@
 
 .productCardInCart .productName h3{
     text-align: center;
-    width: 90%;
+    width: 80%;
     }
 .productCardInCart .productName button.productClearProduct{
     background-color: var(--colorOldRed);
@@ -40,6 +40,7 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     align-self: flex-start;
+    margin-right: 5px;
 }
 .productCardInCart .productFullDescription{
     display: flex;
